--- a/MagicSquare.CSharp.csproj
+++ b/MagicSquare.CSharp.csproj
@@ -68,6 +68,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Scripts\MagicCube\CameraFaceToCube.cs" />
+    <Compile Include="Assets\Scripts\MagicCube\CubeProperties.cs" />
+    <Compile Include="Assets\Scripts\MagicCube\RibikCubeManager.cs" />
+    <Compile Include="Assets\Scripts\MagicCube\RotationManager.cs" />
     <Compile Include="Assets\Scripts\WelcomeScene\UIControl.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\SyntaxTree\UnityVS\2015\UnityVS.CSharp.targets" />
